--- a/game.html
+++ b/game.html
@@ -17,6 +17,11 @@
             <div id="loading"></div>
         </div>
         <div id="game" class="hidden">
+            <div id="score-box">
+                <h3>SCORE:
+                    <span id="current-score">0</span>
+                </h3>
+            </div>
             <div class="question"></div>
             <div class="answer">
                 <ul class="choices">
