Add question packs selector

--- a/index.html
+++ b/index.html
@@ -12,9 +12,17 @@
 <body>
     <div class="main-container">
         <h1>QUIZ</h1>
-        <button id="play-btn" onclick="window.location.href='./game.html'">Play</button>
+        <div id="packs">
+            <h4>Select quiz pack:</h4>
+            <ul id="question-packs">
+                <li><img class="sport-img" src="./img/football.png" alt="football"></li>
+                <li><img class="sport-img" src="./img/basketball.png" alt="basketball"></li>
+                <li><img class="sport-img" src="./img/tennis.jpg" alt="tennis"></li>
+            </ul>
+        </div>
         <button id="highscore-btn">High Scores</button>
     </div>
+    <script src="index.js"></script>
 </body>
 
 </html>
