Save highscore for each Pack

--- a/end.html
+++ b/end.html
@@ -16,6 +16,7 @@
         <h4>High Score: </h4>
         <p id="high-score"></p>
         <button id="play-btn" onclick="window.location.href='./game.html'">Play Again</button>
+        <button id="home-btn" onclick="window.location.href='./index.html'">Home</button>
     </div>
     <script src="./end.js"></script>
 </body>
