Add Highscore Table

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>What do you know ?</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body id="main-body">
     <div class="main-container">
         <h1>QUIZ</h1>
         <div id="packs">
@@ -20,7 +20,7 @@
                 <li><img class="sport-img" src="./img/tennis.jpg" alt="tennis"></li>
             </ul>
         </div>
-        <button id="highscore-btn">High Scores</button>
+        <button id="highscore-btn" onclick="window.location.href='./score.html'">High Scores</button>
     </div>
     <script src="index.js"></script>
 </body>
