Add Home button & Home page animation

--- a/game.html
+++ b/game.html
@@ -8,6 +8,7 @@
     <title>Game</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="game.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 
 <body>
@@ -17,7 +18,8 @@
             <div id="loading"></div>
         </div>
         <div id="game" class="hidden">
-            <div id="score-box">
+            <div id="upper-bar">
+                <i class="fas fa-home" onclick="window.location.href='./index.html'"></i>
                 <h3>SCORE:
                     <span id="current-score">0</span>
                 </h3>
