--- a/index.html
+++ b/index.html
@@ -7,11 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What do you know ?</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
 </head>
 
 <body id="main-body">
     <div class="main-container">
-        <h1>QUIZ</h1>
+        <div class="quiz-title">
+            <h1>QUIZ</h1>
+            <i class="fas fa-angle-double-down"></i>
+            <h2>- <em>SPORTS</em> -</h2>
+        </div>
+
         <div id="packs">
             <h4>Select quiz pack:</h4>
             <ul id="question-packs">
